@@ -1,3 +1,11 @@
+2001-04-02  Michael Engber  <engber@eazel.com>
+
+	reviewed by: John Harper  <jsh@eazel.com>
+
+	* libnautilus-extensions/nautilus-background-canvas-group.c:
+	(nautilus_background_canvas_group_initialize_common):
+	Put back in call to gnome_canvas_set_dither.
+
 2001-04-02  Ramiro Estrugo  <ramiro@eazel.com>
 
 	reviewed by: Gene Ragan <gzr@eazel.com>
